重构路径管理，使用Path替代String，优化文件处理逻辑